only provide suggestions when the latest message is received

--- a/shared/src/main/res/layout/item_smart_reply_suggestion.xml
+++ b/shared/src/main/res/layout/item_smart_reply_suggestion.xml
@@ -19,6 +19,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textColor="@color/primaryText"
+        android:singleLine="true"
+        android:maxLines="1"
         android:textSize="16sp" />
 
 </LinearLayout>
