--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -185,9 +185,9 @@
                     android:id="@+id/smart_reply_container"
                     android:layout_width="match_parent"
                     android:layout_height="56dp"
+                    android:layout_marginStart="@dimen/message_list_padding"
+                    android:layout_marginEnd="@dimen/message_list_padding"
                     android:gravity="end"
-                    android:layout_marginEnd="12dp"
-                    android:layout_marginStart="8dp"
                     android:orientation="horizontal"
                     android:visibility="gone">
 
@@ -195,8 +195,9 @@
                         android:id="@+id/close_smart_replies"
                         android:layout_width="32dp"
                         android:layout_height="48dp"
-                        android:background="?selectableItemBackgroundBorderless"
                         android:layout_gravity="center_vertical"
+                        android:layout_marginStart="8dp"
+                        android:background="?selectableItemBackgroundBorderless"
                         android:clickable="true"
                         android:contentDescription="@string/use_smart_replies"
                         android:src="@drawable/ic_cancel"
@@ -204,11 +205,12 @@
 
                     <LinearLayout
                         android:id="@+id/smart_reply_suggestions_container"
-                        android:orientation="horizontal"
-                        android:gravity="end"
                         android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_marginEnd="12dp"
                         android:layout_weight="1"
-                        android:layout_height="match_parent" />
+                        android:gravity="end"
+                        android:orientation="horizontal" />
 
                 </LinearLayout>
 
