--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,7 +19,7 @@
     <version
         name="4.8.1"
         description="Unknown">
-        <text>Delete one-time passwords, from the notification actions</text>
+        <text>You can now delete one-time passwords, from the notification actions</text>
     </version>
 
     <version
