--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,7 +18,7 @@
 
     <version
         name="4.8.1"
-        description="Unknown">
+        description="April 17th, 2019">
         <text>You can now delete one-time passwords, from the notification actions</text>
     </version>
 
