--- a/shared/src/main/res/layout/page_rate_it.xml
+++ b/shared/src/main/res/layout/page_rate_it.xml
@@ -25,7 +25,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="24dp"
-        android:text="@string/rate_it_title"
+        android:text="@string/love_pulse_question"
         android:textColor="@android:color/white"
         android:background="@color/pulseColorPrimary"
         android:textSize="19sp" />
@@ -93,6 +93,17 @@
         android:paddingEnd="24dp"
         android:paddingBottom="20dp"
         android:text="@string/rate_it_summary"
+        android:textColor="@color/tutorial_light_background_indicator"
+        android:textSize="16sp" />
+
+    <TextView
+        android:id="@+id/bottom_text_2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingStart="24dp"
+        android:paddingEnd="24dp"
+        android:paddingBottom="12dp"
+        android:text="@string/rate_it_not_ready"
         android:textColor="@color/tutorial_light_background_indicator"
         android:textSize="16sp" />
 
