--- a/shared/src/main/res/layout-sw600dp-land/activity_messenger.xml
+++ b/shared/src/main/res/layout-sw600dp-land/activity_messenger.xml
@@ -130,4 +130,30 @@
 
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <com.miguelcatalan.materialsearchview.MaterialSearchView
+            android:id="@+id/conversation_search_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/enter_search"
+            android:textColor="@color/primaryText"
+            android:textColorHint="@color/secondaryText"
+            app:searchBackIcon="@drawable/ic_search_back"
+            app:searchBackground="@color/drawerBackground"
+            app:searchCloseIcon="@drawable/ic_search_close" />
+
+        <FrameLayout
+            android:id="@+id/conversation_search_list"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            android:background="@color/background"
+            android:visibility="gone" />
+
+    </LinearLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
