--- a/shared/src/main/res/layout/activity_messenger.xml
+++ b/shared/src/main/res/layout/activity_messenger.xml
@@ -23,82 +23,114 @@
     android:fitsSystemWindows="true"
     tools:ignore="InconsistentLayout">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/content"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
+        <androidx.coordinatorlayout.widget.CoordinatorLayout
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <com.google.android.material.appbar.AppBarLayout
+                    android:id="@+id/app_bar_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
+
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <xyz.klinker.messenger.shared.view.WhitableToolbar
+                            android:id="@+id/toolbar"
+                            android:layout_width="match_parent"
+                            android:layout_height="?attr/actionBarSize"
+                            android:background="?attr/colorPrimary"
+                            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+                        <com.miguelcatalan.materialsearchview.MaterialSearchView
+                            android:id="@+id/search_view"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:hint="@string/enter_search"
+                            android:textColor="@color/primaryText"
+                            android:textColorHint="@color/secondaryText"
+                            app:searchBackIcon="@drawable/ic_search_back"
+                            app:searchBackground="@color/drawerBackground"
+                            app:searchCloseIcon="@drawable/ic_search_close" />
+
+                    </FrameLayout>
+
+                </com.google.android.material.appbar.AppBarLayout>
+
+                <FrameLayout
+                    android:id="@+id/conversation_list_container"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent" />
+
+            </LinearLayout>
+
+            <View
+                android:id="@+id/nav_bar_divider"
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_gravity="bottom"
+                android:background="@color/navigationBarDivider" />
+
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom|end"
+                android:layout_margin="@dimen/fab_margin"
+                android:contentDescription="@string/compose_message"
+                android:src="@drawable/ic_add"
+                app:borderWidth="0dp"
+                app:elevation="6dp"
+                app:fabSize="normal"
+                app:pressedTranslationZ="12dp"
+                app:rippleColor="@android:color/white" />
+
+            <FrameLayout
+                android:id="@+id/message_list_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
+        </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <com.google.android.material.appbar.AppBarLayout
+            <com.miguelcatalan.materialsearchview.MaterialSearchView
+                android:id="@+id/conversation_search_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                android:id="@+id/app_bar_layout">
-
-                <FrameLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-                    <xyz.klinker.messenger.shared.view.WhitableToolbar
-                        android:id="@+id/toolbar"
-                        android:layout_width="match_parent"
-                        android:layout_height="?attr/actionBarSize"
-                        android:background="?attr/colorPrimary"
-                        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
-                    <com.miguelcatalan.materialsearchview.MaterialSearchView
-                        android:id="@+id/search_view"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:searchBackground="@color/drawerBackground"
-                        app:searchBackIcon="@drawable/ic_search_back"
-                        app:searchCloseIcon="@drawable/ic_search_close"
-                        android:textColor="@color/primaryText"
-                        android:textColorHint="@color/secondaryText"
-                        android:hint="@string/enter_search" />
-
-                </FrameLayout>
-
-            </com.google.android.material.appbar.AppBarLayout>
+                android:hint="@string/enter_search"
+                android:textColor="@color/primaryText"
+                android:textColorHint="@color/secondaryText"
+                app:searchBackIcon="@drawable/ic_search_back"
+                app:searchBackground="@color/drawerBackground"
+                app:searchCloseIcon="@drawable/ic_search_close" />
 
             <FrameLayout
+                android:id="@+id/conversation_search_list"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:id="@+id/conversation_list_container"/>
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:background="@color/background"
+                android:visibility="gone" />
 
         </LinearLayout>
 
-        <View
-            android:id="@+id/nav_bar_divider"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/navigationBarDivider"
-            android:layout_gravity="bottom"/>
-
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/ic_add"
-            android:id="@+id/fab"
-            android:layout_gravity="bottom|end"
-            android:layout_margin="@dimen/fab_margin"
-            android:contentDescription="@string/compose_message"
-            app:elevation="6dp"
-            app:pressedTranslationZ="12dp"
-            app:fabSize="normal"
-            app:rippleColor="@android:color/white"
-            app:borderWidth="0dp" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/message_list_container" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+    </FrameLayout>
 
     <com.google.android.material.navigation.NavigationView
         android:id="@+id/navigation_view"
@@ -107,9 +139,9 @@
         android:layout_gravity="start"
         android:background="@color/drawerBackground"
         app:headerLayout="@layout/drawer_header"
-        app:menu="@menu/navigation_drawer_conversations"
-        app:itemTextColor="@drawable/drawer_text_selector"
         app:itemIconTint="@drawable/drawer_icon_selector"
+        app:itemTextColor="@drawable/drawer_text_selector"
+        app:menu="@menu/navigation_drawer_conversations"
         app:theme="@style/EllipsizeText" />
 
 </androidx.drawerlayout.widget.DrawerLayout>
