--- a/shared/src/main/res/layout/fragment_message_list.xml
+++ b/shared/src/main/res/layout/fragment_message_list.xml
@@ -36,12 +36,29 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
             android:translationY="32dp">
 
-            <xyz.klinker.messenger.shared.view.WhitableToolbar
-                android:id="@+id/toolbar"
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="?attr/colorPrimary"
-                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+                android:layout_height="wrap_content">
+
+                <xyz.klinker.messenger.shared.view.WhitableToolbar
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="?attr/colorPrimary"
+                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+
+                <com.miguelcatalan.materialsearchview.MaterialSearchView
+                    android:id="@+id/search_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    app:searchBackground="@color/drawerBackground"
+                    app:searchBackIcon="@drawable/ic_search_back"
+                    app:searchCloseIcon="@drawable/ic_search_close"
+                    android:textColor="@color/primaryText"
+                    android:textColorHint="@color/secondaryText"
+                    android:hint="@string/enter_search" />
+
+            </FrameLayout>
 
         </com.google.android.material.appbar.AppBarLayout>
 
