--- a/shared/src/main/res/menu-sw600dp-land/fragment_messages.xml
+++ b/shared/src/main/res/menu-sw600dp-land/fragment_messages.xml
@@ -15,6 +15,13 @@
   ~ limitations under the License.
   -->
 
-<menu>
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <item
+        android:id="@+id/menu_search_conversation"
+        android:icon="@drawable/ic_search"
+        android:title="@string/menu_search_conversation"
+        app:showAsAction="always" />
 
 </menu>
