--- a/shared/src/main/res/menu/fragment_messages.xml
+++ b/shared/src/main/res/menu/fragment_messages.xml
@@ -43,6 +43,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/menu_search_conversation"
+        android:icon="@drawable/ic_search"
+        android:title="@string/menu_search_conversation"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_view_media"
         android:icon="@drawable/ic_media"
         android:title="@string/menu_view_media"
