--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="4.9.0"
+        description="Unknown">
+        <text>You can now search within a conversation, rather than being forced to search throughout the entire app</text>
+    </version>
+
+    <version
         name="4.8.1"
         description="April 18th, 2019">
         <text>You can now delete one-time passwords, from the notification actions</text>
