Add date to changelog

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,7 +18,7 @@
 
     <version
         name="4.9.0"
-        description="Unknown">
+        description="April 29th, 2019">
         <text>You can now search within a conversation, rather than being forced to search throughout the entire app</text>
     </version>
 
