--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -19,6 +19,7 @@
     <version
         name="4.9.0"
         description="April 29th, 2019">
+        <!-- Accept multiple images from the gallery picker intent, on the grid of images in the attach menu -->
         <text>You can now search within a conversation, rather than being forced to search throughout the entire app</text>
     </version>
 
