update a few colors for the tablet sign in

--- a/api_implementation/src/main/res/values/colors.xml
+++ b/api_implementation/src/main/res/values/colors.xml
@@ -16,9 +16,9 @@
 
 <resources>
 
-    <color name="api_login_background">#009688</color>
-    <color name="api_login_background_dark">#00695C</color>
-    <color name="api_fab_background">#FFAB40</color>
+    <color name="api_login_background">#1775D2</color>
+    <color name="api_login_background_dark">#1665C0</color>
+    <color name="api_fab_background">#FF6E40</color>
     <color name="api_text_accent">#FFCC80</color>
     <color name="api_divider_color">#22FFFFFF</color>
     <color name="api_window_background">#55000000</color>
