--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,14 @@
 <changelog>
 
     <version
+        name="4.9.2"
+        description="May 11th, 2019">
+        <!-- Follow system dark theme on Android Q -->
+        <!-- Sort groups alphabetically on the compose page -->
+        <text>UI Updates</text>
+    </version>
+
+    <version
         name="4.9.1"
         description="April 29th, 2019">
         <text>Smart replies are automatically sent (after a short timeout period), instead of having to press the "send" button.</text>
