--- a/api_implementation/src/main/res/values/styles.xml
+++ b/api_implementation/src/main/res/values/styles.xml
@@ -18,6 +18,7 @@
 
     <style name="api_Theme.MaterialComponents.Translucent" parent="@style/Theme.MaterialComponents.NoActionBar">
         <item name="colorAccent">@android:color/white</item>
+        <item name="android:textColor">@android:color/white</item>
         <item name="android:background">@android:color/transparent</item>
         <item name="android:windowNoTitle">true</item>
         <item name="android:windowBackground">@android:color/transparent</item>
