--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,7 +18,7 @@
 
     <version
         name="4.9.3"
-        description="May 30th, 2019">
+        description="June 1st, 2019">
         <!-- Only create one thread when receiving messages -->
         <!-- Invalidate conversation image cache after one day -->
         <!-- Improve how the app compat theme gets set and centralize it in TimeUtils -->
