make option to 'pop-out to bubble' within any conversation

--- a/shared/src/main/res/menu/fragment_messages.xml
+++ b/shared/src/main/res/menu/fragment_messages.xml
@@ -31,6 +31,12 @@
         app:showAsAction="never" />
 
     <item
+        android:id="@+id/menu_show_bubble"
+        android:icon="@drawable/ic_bubble"
+        android:title="@string/menu_show_bubble"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_conversation_information"
         android:icon="@drawable/ic_about"
         android:title="@string/menu_conversation_information"
