--- a/shared/src/main/res/menu-sw600dp/fragment_messages.xml
+++ b/shared/src/main/res/menu-sw600dp/fragment_messages.xml
@@ -25,6 +25,12 @@
         app:showAsAction="ifRoom" />
 
     <item
+        android:id="@+id/menu_show_bubble"
+        android:icon="@drawable/ic_bubble"
+        android:title="@string/menu_show_bubble"
+        app:showAsAction="never" />
+
+    <item
         android:id="@+id/menu_call_with_duo"
         android:icon="@drawable/ic_call_video"
         android:title="@string/menu_video_call"
