--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,6 +20,7 @@
         name="4.10.1"
         description="June 18th, 2019">
 <!--        <text>Remove all of the "goAsync" from the SMS/MMS library receivers</text>-->
+        <text>This update contains bug fixes</text>
     </version>
 
     <version
