--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,9 +17,16 @@
 <changelog>
 
     <version
+        name="4.10.2"
+        description="June 21st, 2019">
+        <!-- Make the conversation items just a bit smaller, to fit more on the screen -->
+        <text>This update contains UI improvements</text>
+    </version>
+
+    <version
         name="4.10.1"
         description="June 18th, 2019">
-<!--        <text>Remove all of the "goAsync" from the SMS/MMS library receivers</text>-->
+        <!-- Remove all of the "goAsync" from the SMS/MMS library receivers -->
         <text>This update contains bug fixes</text>
     </version>
 
