--- a/shared/src/main/res/layout/activity_messenger.xml
+++ b/shared/src/main/res/layout/activity_messenger.xml
@@ -102,6 +102,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+            <FrameLayout
+                android:id="@+id/snackbar_container"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
         <LinearLayout
