--- a/shared/src/main/res/values/preferences.xml
+++ b/shared/src/main/res/values/preferences.xml
@@ -72,6 +72,7 @@
 
     <string name="pref_general_category" translatable="false">general_settings_category</string>
     <string name="pref_conversation_list" translatable="false">conversation_list_category</string>
+    <string name="pref_message_list" translatable="false">message_list_category</string>
     <string name="pref_theme_settings" translatable="false">theme_settings</string>
     <string name="pref_global_primary_color" translatable="false">global_primary_color</string>
     <string name="pref_global_primary_dark_color" translatable="false">global_primary_dark_color</string>
@@ -86,6 +87,8 @@
     <string name="pref_ringtone" translatable="false">ringtone</string>
     <string name="pref_base_theme" translatable="false">base_theme</string>
     <string name="pref_bubble_style" translatable="false">bubble_style</string>
+    <string name="pref_message_timestamp" translatable="false">message_timestamp</string>
+    <string name="pref_conversation_categories" translatable="false">conversation_categories</string>
     <string name="pref_swipe_delete" translatable="false">swipe_delete</string>
     <string name="pref_swipe_choices" translatable="false">swipe_choices</string>
     <string name="pref_left_to_right_swipe" translatable="false">left_to_right_swipe</string>
