--- a/shared/src/main/res/xml/settings_theme.xml
+++ b/shared/src/main/res/xml/settings_theme.xml
@@ -14,13 +14,6 @@
             android:defaultValue="day_night" />
 
         <xyz.klinker.messenger.view.AutoSummaryListPreference
-            android:key="@string/pref_bubble_style"
-            android:title="@string/bubble_style"
-            android:entries="@array/bubble_style"
-            android:entryValues="@array/bubble_style_values"
-            android:defaultValue="round" />
-
-        <xyz.klinker.messenger.view.AutoSummaryListPreference
             android:key="@string/pref_font_size"
             android:title="@string/font_size"
             android:entries="@array/font_size"
@@ -36,7 +29,7 @@
     </xyz.klinker.messenger.shared.view.MaterialPreferenceCategory>
 
     <xyz.klinker.messenger.shared.view.MaterialPreferenceCategory
-        android:key="@string/pref_advanced_category"
+        android:key="@string/pref_conversation_list"
         android:title="@string/conversation_list_category">
 
         <xyz.klinker.messenger.view.ColorPreference
@@ -59,6 +52,31 @@
             android:title="@string/apply_theme_globally"
             android:summary="@string/apply_theme_globally_summary"
             android:defaultValue="false" />
+
+        <SwitchPreference
+            android:key="@string/pref_conversation_categories"
+            android:title="@string/conversation_categories"
+            android:summary="@string/conversation_categories"
+            android:defaultValue="true" />
+
+    </xyz.klinker.messenger.shared.view.MaterialPreferenceCategory>
+
+    <xyz.klinker.messenger.shared.view.MaterialPreferenceCategory
+        android:key="@string/pref_message_list"
+        android:title="@string/message_list_category">
+
+        <SwitchPreference
+            android:key="@string/pref_message_timestamp"
+            android:title="@string/message_timestamp"
+            android:summary="@string/message_timestamp_summary"
+            android:defaultValue="false" />
+
+        <xyz.klinker.messenger.view.AutoSummaryListPreference
+            android:key="@string/pref_bubble_style"
+            android:title="@string/bubble_style"
+            android:entries="@array/bubble_style"
+            android:entryValues="@array/bubble_style_values"
+            android:defaultValue="round" />
 
     </xyz.klinker.messenger.shared.view.MaterialPreferenceCategory>
 
