--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,13 @@
 <changelog>
 
     <version
+        name="4.11.1"
+        description="July 9th, 2019">
+        <!-- FEATURE FLAG: update how the notification channels work with the summary notification -->
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="4.11.0"
         description="July 2nd, 2019">
         <text>NEW: Option to hide the date-categories on the conversation list, in favor of a traditional list of items</text>
