--- a/shared/src/main/res/layout/activity_messenger.xml
+++ b/shared/src/main/res/layout/activity_messenger.xml
@@ -14,7 +14,8 @@
   ~ limitations under the License.
   -->
 
-<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<xyz.klinker.messenger.shared.view.ExclusionRectDrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -149,4 +150,4 @@
         app:menu="@menu/navigation_drawer_conversations"
         app:theme="@style/EllipsizeText" />
 
-</androidx.drawerlayout.widget.DrawerLayout>
+</xyz.klinker.messenger.shared.view.ExclusionRectDrawerLayout>
