--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,13 @@
 <changelog>
 
     <version
+        name="4.11.2"
+        description="July 16th, 2019">
+        <!-- Define the exclusion rectangles for the drawer layout on Android Q -->
+        <text>Various Android Q improvements</text>
+    </version>
+
+    <version
         name="4.11.1"
         description="July 9th, 2019">
         <!-- FEATURE FLAG: update how the notification channels work with the summary notification -->
