--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -20,7 +20,9 @@
         name="4.11.2"
         description="July 16th, 2019">
         <!-- Define the exclusion rectangles for the drawer layout on Android Q -->
+        <!-- Stop using the silent notifications channel -->
         <text>Various Android Q improvements</text>
+        <text>Bug fixes</text>
     </version>
 
     <version
