--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,7 +18,7 @@
 
     <version
         name="4.11.4"
-        description="July 16th, 2019">
+        description="July 22nd, 2019">
         <!-- Upload some of the user's preferences to the web, when they sign up for an account -->
         <!-- Always use the latest message as the snippet for the conversation, instead of relying on the internal SMS database for the snippet -->
         <text>Bug fixes</text>
