update a date on the changelog

--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -18,7 +18,7 @@
 
     <version
         name="4.11.5"
-        description="Unreleased">
+        description="August 6th, 2019">
         <text>Translation updates</text>
     </version>
 
