--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,12 @@
 <changelog>
 
     <version
+        name="4.11.6"
+        description="August 13th, 2019">
+        <text>Improvements for Android Q</text>
+    </version>
+
+    <version
         name="4.11.5"
         description="August 6th, 2019">
         <text>Translation updates</text>
