--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,9 +17,16 @@
 <changelog>
 
     <version
+        name="4.11.7"
+        description="August 20th, 2019">
+        <!-- change the message counter text to display "MMS" in the relevant situations -->
+        <!-- AudioWrapper uses the notification volume for it's sound effects -->
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="4.11.6"
         description="August 13th, 2019">
-        <!-- change the message counter text to display "MMS" in the relevant situations -->
         <text>Improvements for Android Q</text>
     </version>
 
