--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,14 @@
 <changelog>
 
     <version
+        name="4.11.8"
+        description="September 9th, 2019">
+        <!-- MMS Changes: https://github.com/klinker41/android-smsmms/releases/tag/v5.2.0 -->
+        <!-- Remove korean character's in conversation snippet, for user request -->
+        <text>Bug fixes</text>
+    </version>
+
+    <version
         name="4.11.7"
         description="August 21st, 2019">
         <!-- Change the default theme for the first run (no conversation categories, no toolbar coloring, dark theme) -->
