--- a/shared/src/main/res/xml/changelog.xml
+++ b/shared/src/main/res/xml/changelog.xml
@@ -17,6 +17,13 @@
 <changelog>
 
     <version
+        name="4.11.9"
+        description="September 16th, 2019">
+        <!-- Lifetime purchase is now $19.99, to test -->
+        <text>Bug fixes for OnePlus devices</text>
+    </version>
+
+    <version
         name="4.11.8"
         description="September 10th, 2019">
         <!-- MMS Changes: https://github.com/klinker41/android-smsmms/releases/tag/v5.2.0 -->
@@ -41,13 +48,13 @@
 
     <version
         name="4.11.5"
-        description="August 6th, 2019">
+        description="August 10th, 2019">
         <text>Translation updates</text>
     </version>
 
     <version
         name="4.11.4"
-        description="July 22nd, 2019">
+        description="August 8th, 2019">
         <!-- Upload some of the user's preferences to the web, when they sign up for an account -->
         <!-- Always use the latest message as the snippet for the conversation, instead of relying on the internal SMS database for the snippet -->
         <!-- On the ConversationListAdapter, always load the color and text/group icon before loading the contact image -->
@@ -56,14 +63,14 @@
 
     <version
         name="4.11.3"
-        description="July 16th, 2019">
+        description="August 4th, 2019">
         <!-- Manage the "NotificationConstants.OPEN_CONVERSATION_ID from the MessengerActivity's pause and resume functions -->
         <text>Bug fixes</text>
     </version>
 
     <version
         name="4.11.2"
-        description="July 16th, 2019">
+        description="July 30th, 2019">
         <!-- Define the exclusion rectangles for the drawer layout on Android Q -->
         <!-- Stop using the silent notifications channel -->
         <text>Various Android Q improvements</text>
@@ -72,7 +79,7 @@
 
     <version
         name="4.11.1"
-        description="July 9th, 2019">
+        description="July 29th, 2019">
         <!-- FEATURE FLAG: update how the notification channels work with the summary notification -->
         <!-- Add the various display densities for the rounded message bubbles -->
         <text>Bug fixes</text>
@@ -80,7 +87,7 @@
 
     <version
         name="4.11.0"
-        description="July 2nd, 2019">
+        description="July 22nd, 2019">
         <text>NEW: Option to hide the date-categories on the conversation list, in favor of a traditional list of items</text>
         <text>NEW: Option to always show the timestamp on messages. When disabled, you can simply tap the message to see the timestamp</text>
     </version>
